cloudbees-ingress-disable.patch.yaml
#
#  Author: Hari Sekhon
#  Date: 2022-01-07 18:01:51 +0000 (Fri, 07 Jan 2022)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/HariSekhon/Kubernetes-configs
#
#  License: see accompanying Hari Sekhon LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/in/HariSekhon
#

# Disables the CloudBees Core CI ingress so it doesn't forward through the Nginx Ingress

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cjoc
  #namespace: cloudbees-core   # don't specify namespace, won't match as the namespace is applied later
spec:
  ingressClassName: DISABLED
  rules:
    - http:
        paths:
          - path: /cjoc
            pathType: Prefix
            backend:
              #serviceName: cjoc
              #servicePort: 80
              service:
                name: cjoc
                port:
                  number: 80
          #- backend:
          #    serviceName: cjoc
          #    servicePort: 80
          #  path: /cjoc/*
